test/errors/python_generator_error/zs/api_clashing/subtype_with_api_clash_error.zs
package api_clashing.subtype_with_api_clash_error;

subtype float64 Api;

struct Test
{
    Api field1;
};
